<resources>
    <string name="app_name">MoviesApp</string>
    <string name="password">Enter password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="sing_up">Sing Up</string>
    <string name="sing_in">Sing In</string>
    <string name="enter_email">Enter email</string>
    <string name="close">Close</string>
    <string name="register">register</string>
    <string name="login_caps">LOGIN</string>
    <string name="item">Item</string>
    <string name="api_key">"2d69bf37526472a27328b8717eb158ea"</string>
    <string name="movies_name">Movies Name</string>
    <string name="name_of_the_movie">Name of the movie</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date :</string>
    <string name="score">Score :</string>
    <string name="_23_june_2018">23 june 2018</string>
    <string name="_7_9">7.9</string>
    <string name="overviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverview">OverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverviewOverview</string>
</resources>