<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesDetailsActivity"
    tools:ignore="ExtraText">


    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/movie_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:text="@string/name_of_the_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/movie_details_header_container_card"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/movie_details_title">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movie_details_image_banner"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_details_body_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_details_header_container_card" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movie_details_body_container_constrain_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/movie_details_body_overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/overview"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_details_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/release_date"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_body_overview_label" />

            <TextView
                android:id="@+id/movie_details_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/score"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_date_label" />

            <TextView
                android:id="@+id/movie_details_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_23_june_2018"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/movie_details_date_label"
                app:layout_constraintTop_toTopOf="@+id/movie_details_date_label" />

            <TextView
                android:id="@+id/movie_details_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_9"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/movie_details_score_label"
                app:layout_constraintTop_toTopOf="@+id/movie_details_score_label" />

            <TextView
                android:id="@+id/movie_details_body_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/overviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverviewoverview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_details_score_label"
                tools:ignore="VisualLintLongText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>